--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "project-backend",
+  "name": "your-angular-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +14,7 @@
   "devDependencies": {
     "@types/mysql": "^2.15.25",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.2"
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
@@ -20,10 +22,11 @@
     "@types/multer": "^1.4.11",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "firebase": "^10.8.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0"
-  }
+  },
+  "description": ""
 }
