--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "your-angular-app",
   "version": "1.0.0",
   "scripts": {
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "build": "ng build"
   },
   "keywords": [],
   "author": "",
