--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "your-angular-app",
   "version": "1.0.0",
   "scripts": {
-    "build": "ng build"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "keywords": [],
   "author": "",
