--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -13,7 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@angular/cli": "^17.2.3",
-    "@types/mysql": "^2.15.25",
+    "@types/mysql": "^2.15.26",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2"
   },
@@ -24,7 +23,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "express-jwt": "^8.4.1",
     "firebase": "^10.8.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0"
