--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "your-angular-app",
+  "name": "project-backend",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "ng": "ng",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@angular/cli": "^17.2.3",
-    "@types/mysql": "^2.15.26",
+    "@types/mysql": "^2.15.25",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.2"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
@@ -22,13 +20,10 @@
     "@types/multer": "^1.4.11",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.3",
-    "express-jwt": "^8.4.1",
+    "express": "^4.18.2",
     "firebase": "^10.8.1",
-    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0"
-  },
-  "description": ""
+  }
 }
